<resources>
    <string name="app_name">iVegan</string>
    <string name="entrega">Entrega</string>
    <string name="retirada">Retirada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="r_gen_pereira_da_silva_30">R. Gen. Pereira da Silva, 30</string>
    <string name="arrowdown">arrowDown</string>
    <string name="ticket">ticket</string>
    <string name="r_20_pra_restaurantes_selecionados">R$ 20 pra restaurantes selecionados</string>
    <string name="v_lido_at_04_04">Válido até 04/04</string>
    <string name="arrowright">arrowRight</string>
    <string name="banner1">banner1</string>
    <string name="banner2">banner2</string>
    <string name="banner3">banner3</string>
    <string name="ultimos_restaurantes">Últimos restaurantes</string>
    <string name="ver_mais">Ver mais</string>
    <string name="veglotus">Veglotus</string>
    <string name="restaurant_logo_1">restaurant-logo-1</string>
    <string name="bistro_vegano">Bistro Vegano</string>
    <string name="nikit_vegan">Nikit Vegan</string>
    <string name="nork_burger">Nork Burger</string>
    <string name="categorias">Categorias</string>
    <string name="drinks">drinks</string>
    <string name="bebidas">Bebidas</string>
    <string name="pascoa">Páscoa</string>
    <string name="farmacia">Farmácia</string>
    <string name="pet">Pet</string>
    <string name="conveniencia">Conveniência</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="filtros">Filtros</string>
    <string name="ordenar">Ordenar</string>
    <string name="entrega_gr_tis">Entrega grátis</string>
    <string name="dist_ncia">Distância</string>
    <string name="entrega_ivegan">Entrega iVegan</string>
    <string name="restaurantimage">restaurantImage</string>
    <string name="star">star</string>
    <string name="item_ou_loja">Item ou loja</string>
    <string name="search_icon">search icon</string>
    <string name="buscas_recentes">Buscas Recentes</string>
    <string name="vegano">Vegano</string>
    <string name="vikings">Vikings</string>
    <string name="burguer_king">Burguer king</string>
    <string name="acai_beat">Acai beat</string>
    <string name="button_image">button image</string>
    <string name="mercado">Mercado</string>
    <string name="promo_es">Promoções</string>
    <string name="pedidos">PEDIDOS</string>
    <string name="no_request">no request</string>
    <string name="pedido_entregue">Pedido entregue -</string>
    <string name="_6243">6243</string>
    <string name="detalhes">Detalhes</string>
    <string name="profilepic">profilepic</string>
    <string name="william_guilherme">William Guilherme</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="bell">bell</string>
    <string name="ganhe_r_10_indicanto_o_ivegan">Ganhe R$ 10 indicanto o iVegan</string>
    <string name="convide_seus_amigos">Convide seus amigos</string>
    <string name="gift">gift</string>
    <string name="notifica_es">Notificações</string>
    <string name="minha_central_de_notificacoes">Minha central de notificações</string>
    <string name="cupons">Cupons</string>
    <string name="meus_cupons_de_desconto">Meus cupons de desconto</string>
    <string name="favoritos">Favoritos</string>
    <string name="meus_locais_favoritos">Meus locais favoritos</string>
    <string name="pagamento">Pagamento</string>
    <string name="minhas_formas_de_pagamento">Minhas formas de pagamento</string>
    <string name="endere_os">Endereços</string>
    <string name="meus_endere_os_de_entrega">Meus endereços de entrega</string>
    <string name="carteira">Carteira</string>
    <string name="meu_saldo_e_qr_code">Meu saldo e QR code</string>
    <string name="ajuda">Ajuda</string>
    <string name="configura_es">Configurações</string>
    <string name="seguranca">Segurança</string>
    <string name="sugerir_restaurantes">Sugerir restaurantes</string>
    <string name="seja_parceiro">Seja parceiro</string>
</resources>