<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="220dp"
    android:layout_marginStart="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sáb - 20 fevereiro 2021" />

    <androidx.cardview.widget.CardView
        android:id="@+id/requestCardView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <ImageView
            android:id="@+id/requestImageView"
            android:layout_width="58dp"
            android:layout_height="54dp"
            android:contentDescription="@string/restaurantimage" />

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            tools:text="Nikit Vegan" />

        <TextView
            android:id="@+id/requestStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="24dp"
            android:text="@string/pedido_entregue" />

        <TextView
            android:id="@+id/requestId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="184dp"
            android:layout_marginTop="24dp"
            tools:text="@string/_6243" />

        <TextView
            android:id="@+id/requestItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            tools:text="1 Greenburger" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="140dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/ajuda"
            android:textAllCaps="false"
            android:textColor="@color/dark_green" />

        <Button
            android:id="@+id/DetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="140dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/detalhes"
            android:textAllCaps="false"
            android:textColor="@color/dark_green" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>