<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deliverView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lastRestaurants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ultimos_restaurantes"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bannersView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/couponCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ticketView"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/ticket"
                android:src="@mipmap/ic_ticket_foreground" />

            <TextView
                android:id="@+id/ticketTitle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:text="@string/r_20_pra_restaurantes_selecionados"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ticketSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="49dp"
                android:text="@string/v_lido_at_04_04" />

            <ImageView
                android:id="@+id/ticketArrowRight"
                android:layout_width="45dp"
                android:layout_height="52dp"
                android:layout_marginStart="320dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/arrowright"
                android:src="@drawable/ic_arrow_right_foreground" />
        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:id="@+id/bannersView"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/couponCard">

            <LinearLayout
                android:id="@+id/scrollableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/banner1"
                    android:layout_width="wrap_content"
                    android:layout_height="158dp"
                    android:layout_marginEnd="36dp"
                    android:background="@color/white"
                    android:contentDescription="@string/banner2"
                    app:srcCompat="@drawable/landing_banner_1" />

                <ImageButton
                    android:id="@+id/banner2"
                    android:layout_width="wrap_content"
                    android:layout_height="158dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:contentDescription="@string/banner2"
                    app:srcCompat="@drawable/landing_banner_2" />

                <ImageButton
                    android:id="@+id/banner3"
                    android:layout_width="wrap_content"
                    android:layout_height="158dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:contentDescription="@string/banner3"
                    app:srcCompat="@drawable/landing_banner_3" />
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/moreButton"
            android:layout_width="98dp"
            android:layout_height="34dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/ver_mais"
            android:textAllCaps="false"
            android:textColor="@color/dark_green"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bannersView" />

        <HorizontalScrollView
            android:id="@+id/lastRestaurantsView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreButton">

            <LinearLayout
                android:id="@+id/lastRestaurantsLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/bistrosCard"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp">

                    <ImageView
                        android:id="@+id/bistroLogo"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/restaurant_logo_1"
                        android:elevation="4dp"
                        app:srcCompat="@drawable/bistro" />

                    <TextView
                        android:id="@+id/bistroName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="66dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/bistro_vegano"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/vegLotusCard"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp">

                    <ImageView
                        android:id="@+id/vegLotusLogo"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/restaurant_logo_1"
                        android:elevation="4dp"
                        app:srcCompat="@drawable/veglotus" />

                    <TextView
                        android:id="@+id/vegLotusName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="66dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/veglotus"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/nikitCard"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp">

                    <ImageView
                        android:id="@+id/nikitLogo"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/restaurant_logo_1"
                        android:elevation="4dp"
                        app:srcCompat="@drawable/nikitvegan" />

                    <TextView
                        android:id="@+id/nikitName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="66dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/nikit_vegan"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/norkCard"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp">

                    <ImageView
                        android:id="@+id/norkLogo"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/restaurant_logo_1"
                        android:elevation="4dp"
                        app:srcCompat="@drawable/nork" />

                    <TextView
                        android:id="@+id/norkName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="66dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/nork_burger"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
